# simple_gltf_viewer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGLFW3.cmake  FindNFD.cmake
lib/glad-0.1.34/include/glad/: glad.h
lib/glad-0.1.34/src/: glad.c
resources/models/: base4.glb  base__.glb  base_inst.glb  base_non_inst.glb
resources/shaders/: cube_map.fs  get_back_normals.fs  light_map.fs  pbr.fs  w_parallax.fs
src/: main.cpp
src/core/: Application.cpp  Application.h  Platform.h  courier_new_bold.inl  courier_new_regular.inl  helvetica.inl
src/events/: IEvent.h  IEventListener.h  IEventSource.h
src/opengl/: Buffer.cpp  Buffer.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  GLUtilities.h  IndexBuffer.cpp  IndexBuffer.h  Pipeline.h  Program.cpp  Program.h  Render.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  VertexArray.cpp  VertexArray.h  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h
src/resources/: CubeMap.cpp  CubeMap.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Program.cpp  Program.h  Resource.cpp  Resource.h
src/utilities/BoundingObjects/: AABB.h
src/utilities/Camera/: Camera.cpp  Camera.h
src/utilities/Emsc/: EMObject.cpp  EMObject.h  Multimedia.cpp  Multimedia.h  webxr.cpp  webxr.h
src/utilities/Events/: CallBack.h
src/utilities/FileDialog/: EmscriptenFileDialog.cpp  EmscriptenFileDialog.h  FileDialog.h  IFileDialog.h  NativeFileDialog.cpp  NativeFileDialog.h
src/utilities/Renderer/: IRender.h  RenderLightMap.cpp  RenderLightMap.h  RenderPBR.cpp  RenderPBR.h  Rendering.cpp  Rendering.h
src/utilities/Resources/: CubeMapsManager.cpp  CubeMapsManager.h  IResourceManager.h  ImagesManager.cpp  ImagesManager.h  ModelsManager.cpp  ModelsManager.h  ProgramsManager.cpp  ProgramsManager.h  ResourcesManager.cpp  ResourcesManager.h
src/utilities/Shape/: Cone.h  Cube.h  Plane.cpp  Plane.h  Prism.cpp  Prism.h  Shape.h  Sphere.h  Vertex.h
src/utilities/imgui_tools/: imgui_animated.cpp  imgui_animated.h  imgui_util.cpp  imgui_util.h
superbuild/: CMakeLists.txt
superbuild/patches/imguizmo/: ImGuizmo.cpp  ImGuizmo.h
